# ayatana-greeter-badges

./: CMakeLists.txt  ChangeLog  NEWS  README.md
data/: CMakeLists.txt
data/badges/: CMakeLists.txt
debian/: changelog  control  copyright  rules
